--- a/Snake.vcxproj.filters
+++ b/Snake.vcxproj.filters
@@ -66,4 +66,9 @@
       <Filter>Исходные файлы\WndPart</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="Progress.md">
+      <Filter>Файлы ресурсов</Filter>
+    </Text>
+  </ItemGroup>
 </Project>
