--- a/Snake.vcxproj
+++ b/Snake.vcxproj
@@ -162,7 +162,29 @@
     <ResourceCompile Include="Snake.rc" />
   </ItemGroup>
   <ItemGroup>
+    <Image Include="data\blue portal\BP1.bmp" />
+    <Image Include="data\blue portal\BP10.bmp" />
+    <Image Include="data\blue portal\BP11.bmp" />
+    <Image Include="data\blue portal\BP2.bmp" />
+    <Image Include="data\blue portal\BP3.bmp" />
+    <Image Include="data\blue portal\BP4.bmp" />
+    <Image Include="data\blue portal\BP5.bmp" />
+    <Image Include="data\blue portal\BP6.bmp" />
+    <Image Include="data\blue portal\BP7.bmp" />
+    <Image Include="data\blue portal\BP8.bmp" />
+    <Image Include="data\blue portal\BP9.bmp" />
     <Image Include="data\grass.bmp" />
+    <Image Include="data\red portal\RP1.bmp" />
+    <Image Include="data\red portal\RP10.bmp" />
+    <Image Include="data\red portal\RP11.bmp" />
+    <Image Include="data\red portal\RP2.bmp" />
+    <Image Include="data\red portal\RP3.bmp" />
+    <Image Include="data\red portal\RP4.bmp" />
+    <Image Include="data\red portal\RP5.bmp" />
+    <Image Include="data\red portal\RP6.bmp" />
+    <Image Include="data\red portal\RP7.bmp" />
+    <Image Include="data\red portal\RP8.bmp" />
+    <Image Include="data\red portal\RP9.bmp" />
     <Image Include="data\wall.bmp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
